--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.6",
+    "@angular/cdk": "^20.0.0",
     "@angular/common": "^20.3.6",
     "@angular/compiler": "^20.3.6",
     "@angular/core": "^20.3.6",
@@ -21,8 +23,17 @@
     "@angular/platform-server": "^20.3.6",
     "@angular/router": "^20.3.6",
     "@angular/ssr": "^20.3.6",
+    "@nebular/eva-icons": "16.0.0",
+    "@nebular/theme": "^16.0.0",
+    "@primeuix/themes": "^1.2.5",
+    "@tailwindcss/postcss": "^4.1.15",
+    "eva-icons": "^1.1.3",
     "express": "^4.18.2",
+    "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.15",
     "tslib": "^2.3.0",
     "uuid": "^13.0.0",
     "zone.js": "~0.15.0"
@@ -31,6 +42,7 @@
     "@angular/build": "^20.3.6",
     "@angular/cli": "^20.3.6",
     "@angular/compiler-cli": "^20.3.6",
+    "@schematics/angular": "^20.3.6",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
